@@ -16,6 +16,8 @@ Some optimizations for CMAC and Poly1305.
 Added the GCM (Galois counter mode) and ETM (Encrypt then MAC) authenticated
 encryption schemes.
 
+Some optimizations for CBC and CTR modes.
+
 * Version 0.42, released 2018-08-09
 
 ** bug fixes
